# ULOD

./: .gitignore  README.md  old.pyproject.toml  pyproject.toml
examples/scripts/: example_ckan.py  example_socrata.py
scripts/: example_ckan.py  example_un_topics.py
src/ulod/: __init__.py
src/ulod.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/ulod/bulk/: __init__.py  ckan.py  ckan.py.old  configurations.py  socrata.py  socrata.py.old
src/ulod/ckan/: __init__.py  canada.py  ckan.py  italy.py  modena.py  uk.py
src/ulod/socrata/: __init__.py  chicago.py  nyc.py  socrata.py  utils.py
src/ulod/un/: __init__.py
src/ulod/utils/: exceptions.py
src/ulod/wbo/: __init__.py
ulod/: __init__.py
ulod/bulk/: __init__.py  ckan.py  socrata.py  utils.py
ulod/ckan/: __init__.py  canada.py  ckan.py  italy.py  modena.py  uk.py
ulod/socrata/: __init__.py  chicago.py  nyc.py  socrata.py  utils.py
ulod/un/: __init__.py  un.py
ulod/wbo/: __init__.py  wbo.py
