[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ULOD"
version = "0.1"
author = [
  {
    name="Giovanni Malaguti", email="giovanni.malaguti00@gmail.com"
  }
]
description = "UseLess Open Data: a simple library with one goal: large downloads from Open Data domains."

requires-python = ">=3.12"

dependencies = [
  "pandas>=2.3.3",
  "polars>=1.35.2",
  "sodapy==2.2.0"
  "requests>=2.32.5",
  "beautifuolsoup4==4.14.2",
  "tqdm==4.67.1",
  "fake_useragent==2.2.0",
  "urllib3==2.5.0",
]
