[project]
name = "ulod"
version = "0.1.0"

authors = [
  { name = "Giovanni Malaguti", email = "giovanni.malaguti00@gmail.com" },
]

description = "UseLess Open Data. A simple library with one goal: large downloads from Open Data domains."

readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "beautifulsoup4>=4.14.3",
  "fake-useragent>=2.2.0",
  "pandas>=2.3.3",
  "polars>=1.36.1",
  "requests>=2.32.5",
  "sodapy>=2.2.0",
  "tqdm>=4.67.1",
  "urllib3>=2.6.2",
]
